[package]
name = "msgvec"
version = "0.1.0"
edition = "2021"
authors = ["Julian Schmid <info@julianschmid.name>"]
repository = "https://github.com/JulianSchmid/msgvec"
description = "Placeholder"
license = "MIT OR Apache-2.0"
exclude = [
    ".gitignore",
    ".github/*",
    ".gitlab-ci.yml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
